# lucidMQ

./: CMakeLists.txt  daemon.c  initconf.c  lucid.h  lucidctl.c  receiver.c  sender.c  util.c  xmlconf.c
.github/workflows/: ccpp.yml
clientlib/: lucidmq.c  lucidmq.h  mqread.c  mqwrite.c
docs/: README.md  sample_conf.xml
